feat(account): async-confirmed account deletion via dedicated service
Add AccountDeletionService as the single path behind DELETE /auth/delete.
It dissolves active budgets and rakes matured savings into the wallet, then
either closes the account or returns WITHDRAWAL_REQUIRED with the consolidated
balance so the client can send it to the user's bank first. The flow is
async-confirmed and idempotent: it blocks while a withdrawal is still settling
(INITIATED/PROCESSING) or while savings are still maturing, so a re-tap only
finalizes once the transfer has actually cleared. The optional deletion reason
is captured in profileData (no schema change).

Deprecates the old UserService.deleteUserAccount, which is no longer wired.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>